# duckstation

./: duckstation.sln
.github/workflows/: rolling-release.yml
dep/: CMakeLists.txt
dep/fpng/: CMakeLists.txt  fpng.vcxproj  fpng.vcxproj.filters
scripts/: build-dependencies-mac.sh  build-dependencies-windows-arm64.bat  build-dependencies-windows-x64.bat  build-dependencies.sh
src/core/: CMakeLists.txt  core.props  core.vcxproj  freecam.cpp  gpu_commands.cpp  gte.cpp  pgxp.cpp  pgxp.h  screenshot_3d.cpp  screenshot_3d.h
src/util/: input_manager.cpp
